fix(3156126186): align transaction modals to Figma

--- a/src/components/UI/Modal/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal/Modal.module.scss
@@ -24,11 +24,7 @@
 
     & > * {
       &:not(:first-child) {
-        margin-top: 30px;
-      }
-
-      &:not(:last-child) {
-        margin-bottom: 30px;
+        margin-top: 8px;
       }
     }
 
