--- a/src/components/UI/Modal/OnboardingModal/OnboardingModalBody/OnboardingModalBody.module.scss
+++ b/src/components/UI/Modal/OnboardingModal/OnboardingModalBody/OnboardingModalBody.module.scss
@@ -2,6 +2,7 @@
 
 .onboardingModalBody {
   color: $--color-black;
+  margin-bottom: 24px;
 
   ul {
     text-align: left;
